# template-rust-rest-api

./: Cargo.toml  README.md
src/: main.rs
src/models/: message.rs  mod.rs  response.rs  user.rs
src/routes/: index.rs  message.rs  mod.rs  user.rs
